# satysfi-tombo

./: .gitignore  README.md  Satyristes  satysfi-tombo-doc.opam  satysfi-tombo.opam
doc/: manual-ja.saty  manual.satyh
src/: tombo.satyh
