opam-version: "2.0"
name: "satysfi-tombo-doc"
version: "0.1.0"
synopsis: "Document of Tombo Package"
description: """
Document of Tombo Package.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/satysfi-tombo"
dev-repo: "git+https://github.com/puripuri2100/satysfi-tombo.git"
bug-reports: "https://github.com/puripuri2100/satysfi-tombo/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-dist"

  # You may want to include the corresponding library
  "satysfi-tombo" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "tombo-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "tombo-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
