opam-version: "2.0"
name: "satysfi-tombo"
version: "0.2.0"
synopsis: "Generate Japanese-style crop marks"
description: """
Generate Japanese-style crop marks.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/satysfi-tombo"
dev-repo: "git+https://github.com/puripuri2100/satysfi-tombo.git"
bug-reports: "https://github.com/puripuri2100/satysfi-tombo/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "tombo"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
